alignment fixed

--- a/CSS/common.css
+++ b/CSS/common.css
@@ -4,9 +4,6 @@
 	width: 550px;
 	max-width: 100%;
 }
-.content {
-	margin-left:15px;
-}
 .links {
 	background-color: #00b34a;
 }
